objects/Scope_Call_Notes__c.object
<CustomObject>
    <fields>
        <fullName>Abstracts_Launch__c</fullName>
        <label>Abstracts Launch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appointments_Launch__c</fullName>
        <label>Appointments Launch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scope Resource</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scope_Call_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CC_Launch__c</fullName>
        <label>CC Launch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <label>Call Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Earliest_Start_Date__c</fullName>
        <label>Earliest Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Launch_Target__c</fullName>
        <label>Event Launch Target</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_close_Date__c</fullName>
        <label>Estimated Contract Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Global__c</fullName>
        <label>Global</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrations__c</fullName>
        <label>Integrations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Lanyon__c</fullName>
        <label>Legacy Lanyon</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Modules_covered_in_Scope__c</fullName>
        <label>Modules covered in Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meetings Management</fullName>
                </value>
                <value>
                    <fullName>Attendee Management</fullName>
                </value>
                <value>
                    <fullName>Sourcing</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>HCP</fullName>
                </value>
                <value>
                    <fullName>Crowd Compass</fullName>
                </value>
                <value>
                    <fullName>Inquisium</fullName>
                </value>
                <value>
                    <fullName>Resource Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Weeks_Scoped__c</fullName>
        <label>Number of Weeks Scoped</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Scope_Call_Notes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SMM_Implementations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SMM Implementations</label>
        <referenceTo>SMM_Implementations__c</referenceTo>
        <relationshipName>Scoping_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scope_Call_Date__c</fullName>
        <label>Scope Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scope_Type__c</fullName>
        <label>Scope Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional Implementation</fullName>
                </value>
                <value>
                    <fullName>EPM Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scoped_Hours__c</fullName>
        <label>Scoped Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scoped_Status__c</fullName>
        <label>Scoped Status (Scope Object)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scoped</fullName>
                </value>
                <value>
                    <fullName>Scoping Due</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Awaiting Sales Feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Case_Notes__c</fullName>
        <label>Special Case Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Scope Call Notes</label>
    <nameField>
        <label>Scoping Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scope Call Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>